# poc

./: .gitattributes  Cargo.toml  install.bat  install.sh
pasm/: Cargo.toml
pasm/editors/vscode/: language-configuration.json  package.json
pasm/editors/vscode/syntaxes/: pasm.tmLanguage.json
pasm/examples/: calculator.pasm  devices.pasm  ptes_test.pasm  stdout_helloworld.pasm  sti_helloworld.pasm  sti_image.pasm  sti_snake.pasm  test.pasm
pasm/examples/std/: idivmod.pasm  ige.pasm  inst.pasm  mul.pasm  parseu.pasm  printi.pasm  prints.pasm  printu.pasm  ptes.pasm  udivmod.pasm  uge.pasm
pasm/src/: compiler.rs  instructions.json  lexer.rs  lib.rs  main.rs  message.rs  next_n.rs  parser.rs  preprocessor.rs  signature.rs  source.rs
pemu/: Cargo.toml
pemu/src/: cli.rs  lib.rs  main.rs
pemu/src/cpu/: cpu.rs  mod.rs  periphery.rs
pemu/src/cpu/device/: devices.rs  mod.rs  sti.rs
ptes/: font.ase  table.txt
