[package]
name = "pasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
colored = "2.0.4"
serde_json = "1.0.102"
itertools = "0.11.0"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0.171"
features = [ "derive" ]

[dependencies.clap]
version = "4.4.1"
features = [ "cargo" ]