[package]
name = "pemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
colored = "2.0.4"
crossterm = "0.26.1"
pixels = "0.13.0"
winit = "0.28.6"
image = "0.24.6"
spin_sleep = "1.1.1"
parking_lot = "0.12.1"

[dependencies.pasm]
path = "../pasm"

[dependencies.clap]
version = "4.4.1"
features = [ "cargo", "derive" ]